<resources>
    <string name="app_name">android</string>
    <string name="action_settings">Settings</string>
    <string name="display_cinemas_title">Please select a Cinema you are interested in:</string>

    <!-- Register Form Localizable Strings -->
    <string name="register_title">Please enter your credentials to register:</string>
    <string name="register_button">Register</string>
    <string name="register_email_hint">Enter your e-mail</string>
    <string name="register_password_hint">Enter your password</string>
    <string name="register_first_name_hint">Enter your first name</string>
    <string name="register_last_name_hint">Enter your last name</string>

    <!-- Login Form Localizable Strings -->
    <string name="login_title">Please enter your credentials:</string>
    <string name="login_button">Login</string>
    <string name="login_email_hint">Enter your e-mail</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="does_not_have_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>

</resources>